@@ -1,5 +1,5 @@
 
-// Styles for Devise views
+// Styles for form views
 // using Foundation
 // generated by the rails_layout gem
 .authform {
