@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.16"
+  VERSION = "1.0.17"
 end
