@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 1.0.17 May 30, 2014
+
+* add styling for forms when either Devise or OmniAuth is present
+
 h3. 1.0.16 May 10, 2014
 
 * add missing Devise form for password reset
